Legge til sakstema og toggleEnabled i dto mot dokgen. Fikser tester. Endrer litt logikk på muligeBrev og brevbygging til å støtte nye behandlingstyper og sakstema.